--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1,8 +1,28 @@
+.tile1 {
+  background-color: #003060;
+}
+
+.tile2 {
+  background-color: #055c9d;
+}
+
+.tile3 {
+  background-color: #0e86d4;
+}
+
+.tile4 {
+  background-color: #2e8bc0;
+}
+
+.tile5 {
+  background-color: #8ac3e3;
+}
+
 body {
   margin: 0;
   padding: 0;
   background-color: #f5f1de;
-  color: rgb(36 113 163);
+  color: rgb(36, 113, 163);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -39,17 +59,18 @@ h1 {
   margin-bottom: 30px;
   color: black;
 }
+
 a {
   text-decoration: none;
   color: rgb(240, 240, 240);
   font-weight: bold;
 }
+
 .tile {
   width: 100%;
   /* height: 56px; */
   margin: 7px;
   border-radius: 17px;
-  background-color: rgb(36, 113, 163);
   display: flex;
   justify-content: space-between;
 }
@@ -102,4 +123,4 @@ h2 {
   font-weight: 500;
   line-height: 1.5;
   color: black;
-}
+}/*# sourceMappingURL=main.css.map */
